<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_avg"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_huge">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/translogo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TransChato"

            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="25dp"

            />
    </LinearLayout>

    <EditText

        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/person"
        android:id="@+id/edit_text_email_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/email"
        android:drawablePadding="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_avg"
        android:layout_gravity="center"
        android:textColorHint="@color/white"
        android:padding="5dp"

        android:textColor="@color/white"
        android:background="@drawable/layout_rounded_edit"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/key"
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:padding="5dp"
        android:drawablePadding="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_avg"
        android:paddingRight="@dimen/margin_big"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/layout_rounded_edit"

        android:inputType="textPassword" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_avg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_small"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_login"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:background="@drawable/layout_rounded_button"/>

        <Button
            android:id="@+id/button_register"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/layout_rounded_button"
            android:layout_gravity="center"
            android:text="Register" />
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/binarylogo"
            />
    </LinearLayout>

</LinearLayout>
</ScrollView>